# padelwatcher

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  PROJECT_STRUCTURE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/instructions/: frontend.instructions.md
.github/prompts/: build-frontend.prompt.md
.github/workflows/: ci-cd.yml  copilot-setup-steps.yml  deploy.yml
backend/: .env.example  API_DOCUMENTATION.md  API_REFACTORING.md  alembic.ini  entrypoint.sh  requirements.txt  test_auth_flow.py  test_profile_endpoints.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  1d63dcf5e3cd_.py  2a72b8b2565d_add_users_table_with_approval_system.py  5456050ec14e_update_search_orders_for_multi_location_.py  6d0154cbdd02_add_active_field_to_users.py  6d7ea99a4fb3_add_indoor_and_double_columns_to_courts_.py  72cc5a0ab574_initial_schema.py  873d51e20ee9_merge_heads.py  8aa107bdc8ba_add_court_config_to_search_requests.py  a714dd8e1ba1_initial_migration.py  aa96c93ebda7_change_search_orders_to_support_time_.py  add_search_order_tables.py  add_unique_slug_constraint.py  c4a44dc208d2_add_searchtask_model_for_background_.py  d2ffea72c418_add_search_requests_table.py  d9090b31251b_add_timezone_column_to_locations_table.py  f664ba0abdd2_add_more_fields_to_locations_and_courts.py
backend/app/: __init__.py  api.py  config.py  constants.py  email_service.py  models.py  scheduler.py  services.py  utils.py
backend/app/courtfinder/: README.md  __init__.py  base_provider.py  padelmate.py  playtomic.py
backend/app/routes/: __init__.py  admin.py  auth.py  locations.py  search.py  search_orders.py  tasks.py
backend/app/services/: __init__.py  availability_service.py  court_service.py  location_service.py  search_order_service.py  search_service.py  task_service.py  user_service.py
backend/scripts/: __init__.py  api_demo.py  create_admin.py  run_api.sh  search_scheduler.py
backend/tests/: __init__.py  test_api.py  test_comprehensive_time_range.py  test_padelmate.py  test_search_workflow.py  test_time_range_search.py
docker/: docker-compose-base.yml  docker-compose.dev.yml  docker-compose.yml
docker/nginx/: nginx.conf
docker/nginx/conf.d/: README.md  default.conf
docker/nginx/ssl/: README.md
nginx/conf.d/: default.conf
scripts/: backup.sh  dependency.sh  deploy.sh  health-check.sh  setup.sh  setup_postgres.sh
web/: .env.development  .env.example  .env.production  DEVELOPMENT.md  QUICK_REFERENCE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css  router.tsx
web/src/components/forms/: AddLocationForm.tsx
web/src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx
web/src/components/ui/: Alert.tsx  Badge.tsx  Button.tsx  Card.tsx  Checkbox.tsx  DatePicker.tsx  Dialog.tsx  Input.tsx  Label.tsx  MultiSelect.tsx  Progress.tsx  Select.tsx  Spinner.tsx  TimePicker.tsx  index.ts
web/src/contexts/: AuthContext.tsx  index.ts
web/src/lib/api/: admin.ts  auth.ts  client.ts  config.ts  index.ts  locations.ts  search.ts
web/src/lib/auth/: token.ts
web/src/lib/utils/: cn.ts  format.ts
web/src/pages/admin/: AdminPage.tsx
web/src/pages/auth/: LoginPage.tsx  PendingApprovalPage.tsx  RegisterPage.tsx  index.ts
web/src/pages/courts/: CourtsPage.tsx  index.ts
web/src/pages/dashboard/: DashboardPage.tsx
web/src/pages/locations/: LocationsPage.tsx  index.ts
web/src/pages/profile/: ProfilePage.tsx
web/src/pages/public/: HomePage.tsx  SearchPage.tsx  SearchResultsPage.tsx  index.ts
web/src/pages/search/: SearchPage.tsx  SearchResultsPage.tsx  index.ts
web/src/pages/search-orders/: CreateSearchOrderPage.tsx  SearchOrdersPage.tsx  index.ts
web/src/types/: api.ts  auth.ts  index.ts  location.ts  search.ts
