[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "padelwatcher"
version = "0.1.0"
description = "PadelWatcher Backend API"
readme = "README.md"
requires-python = ">=3.12,<4.0"
keywords = ["flask", "api", "backend", "padel"]
license = {text = "MIT"}
authors = [
    {name = "Thom Ezechiels", email = "thom@techletes.ai"},
]
maintainers = [
  { name = "Techletes DevOps Team", email = "dev@techletes.ai" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

# Add project dependencies here. pip-tools will read them from here, do not use a requirements file!
dependencies = [
    # Core Flask
    "flask>=3.0.0",
    "flask-smorest>=0.44.0",
    "gunicorn>=21.2.0",

    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",

    # Background tasks
    "redis>=5.0.0",
    "rq>=1.15.0",

    # Authentication
    "authlib>=1.3.0",
    "cryptography>=41.0.0",

    # Security
    "flask-limiter>=3.5.0",
    "flask-talisman>=1.1.0",
    "flask-cors>=4.0.0",
    "pyjwt[jwk]>=2.8.0",

    # Logging and monitoring
    "structlog>=23.2.0",
    "prometheus-flask-exporter>=0.23.0",

    # Utilities
    "marshmallow>=3.20.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "requests>=2.31.0",

    # 2FA/TOTP
    "pyotp>=2.9.0",
    "qrcode[pil]>=7.4.0",

    # Mistral
    "mistralai",

    # Document handling
    "python-docx>=0.8.11",

    # Azure retrieval
    "msgraph-sdk",
    "azure-identity",

    # Excel file handling
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "detect-secrets",
  "nbstripout",
  "black",
  "ruff",
  "mypy",
  "pip-audit>=2.9.0",
  "pip-tools",

  # Testing dependencies
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-mock>=3.10.0",
  "pytest-flask>=1.3.0",
  "pytest-xdist>=3.0.0",
  "pytest-beartype",
  "beartype",
]

[project.urls]
Homepage = "https://github.com/techletes/crisisbuddy"
Repository = "https://github.com/techletes/crisisbuddy"
Issues = "https://github.com/techletes/crisisbuddy/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--strict-markers",
    "--strict-config",
]
markers = [
    "coverage: mark test to run with coverage collection",
]
testpaths = ["**/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]

[tool.coverage.run]
source = ["api"]
omit = [
    "*/__pycache__/*",
    "*/tests/*",
    "*/.venv/*",
    "*/venv/*",
    "*/__init__.py",
    "setup.py",
    "*/migrations/*",
    "api/main.py",
    "api/manage.py",
    # Add any other files you want to exclude from test coverage
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "except ImportError",
    "pass",
]

[tool.mypy]
python_version = "3.12"

# ignore_missing_imports for third-party libs without type hints
ignore_missing_imports = true
follow_imports = "silent"

# strictness settings - adjust as needed
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
no_implicit_optional = true
allow_redefinition = true
show_error_codes = true
show_column_numbers = true
pretty = true
warn_unused_configs = true

# enforce typing on own code
disallow_untyped_defs = true
disallow_incomplete_defs = true

exclude = [
  "migrations",
  "notebooks",
  "tests",
]
plugins = []

# Loosen rules for test and script files
[[tool.mypy.overrides]]
module = ["tests.*", "scripts.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false

[tool.ruff]
target-version = "py311"
line-length = 88
fix = true
respect-gitignore = true
extend-exclude = ["migrations", "experimental", "*.ipynb"]

# Enable popular rule sets
lint.select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
  "B",  # bugbear
  "UP", # pyupgrade
]

# Rules to ignore (common ones)
lint.ignore = [
  "B008",  # Do not perform function calls in argument defaults
  "E501",  # Line too long (Black handles this)
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101", "B601"]
